--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,9 @@
-spring.profiles.active=test
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name:org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:men:db;DB_CLOSE_DELAY=-1
+#spring.datasource.url=jdbc:h2:file:/data/demo
+#spring.datasource.url=jdbc:h2:mem:testdb  
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true 
