--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.profiles.active=dev
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/wallet
+spring.datasource.username=postgres
+spring.datasource.password=postgres
