--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -54,7 +58,6 @@
 		<dependency>
 		    <groupId>javax.validation</groupId>
 		    <artifactId>validation-api</artifactId>
-		    <version>2.0.1.Final</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.postgresql</groupId>
@@ -66,7 +69,7 @@
 		    <artifactId>flyway-core</artifactId>
 		    <scope>runtime</scope>
 		</dependency>
-		
+				
 		
 	</dependencies>
 
