testes concluidos wallet item

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/wallet
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+pagination.items_per_page=10
