--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 pagination.items_per_page=10
+#Jwt
+jwt.secret=_(120@#$3t09138uioajsdU2B1Rjs32
+#valor em segundos, nesse caso 10 minutos
+jwt.expiration=600
