--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,16 @@
 		    <artifactId>flyway-core</artifactId>
 		    <scope>runtime</scope>
 		</dependency>
-				
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
 		
 	</dependencies>
 
